# git-contributors

./: .gitignore  Cargo.toml  Makefile  README.md
doc/: git-contributors.1
src/: cli.rs  collect.rs  data.rs  dates.rs  formatting.rs  git.rs  histogram.rs  interactive.rs  main.rs  parsing.rs  process.rs  shell.rs  sparklines.rs
tests/: test_simple_git_repo.sh
