[package]
name = "git-contributors"
description = "View commit histograms in your terminal"
homepage = "https://github.com/basictofu/git-contributors"
repository = "https://github.com/basictofu/git-contributors"
version = "0.1.0"
edition = "2024"
license-file = "LICENSE"
readme = "README.md"
keywords = ["git", "visualization"]
categories = ["command-line-utilities", "visualization"]

[dependencies]
chrono = "0.4.43"
clap = { version = "4.5.59", features = ["derive"] }
crossterm = "0.29.0"
ratatui = "0.30.0"
regex = "1.12.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
